--- a/display-exercise.html
+++ b/display-exercise.html
@@ -15,8 +15,17 @@
   <!-- your styles will go in display-page.css -->
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
-<body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
-</body>
-</html>
+  <body>
+   <div class='container'>
+      <div class='onerow'>
+            <div class='box green'></div>
+            <div class='box blue'></div>
+      </div>
+      <div class='tworow'>
+          <div class='box gray'></div>
+          <div class='box black'>Happy Halloween</div>
+          <div class='box gold'></div>
+      </div>
+    </div>
+  </body>
+  </html>
